# pdfsink-rs-util

./: Cargo.toml  LICENSE-MIT  README.md
macros/: Cargo.toml
macros/src/: from_table.rs  lib.rs  table.rs  util.rs  validate_table.rs
macros/src/from_table/: field.rs  not_strict.rs  strict.rs
macros/src/table/: args.rs  field.rs  strict.rs
macros/src/validate_table/: args.rs  column.rs
pdfsink-rs-util/: Cargo.toml
pdfsink-rs-util/src/: column.rs  lib.rs  macros.rs  table.rs  util.rs
pdfsink-rs-util/src/table/: validator.rs
test-usage/: Cargo.toml
test-usage/src/: main.rs
