[package]
name = "pdfsink-rs-util-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro-error = "1.0.4"
darling = "0.23.0"
proc-macro2 = "1.0.106"
strum = { version = "0.28.0", features = ["derive"] }
